--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,11 @@ on:
 jobs:
   terraform:
     name: 'Terraform'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
+
+    permissions:
+      id-token: write   # Required for OIDC
+      contents: read    # Required for actions/checkout
 
     env:
       AWS_REGION: "${{ vars.AWS_REGION }}"
