--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       contents: read    # Required for actions/checkout
 
     env:
-      AWS_REGION: "${{ vars.AWS_REGION }}"
+      AWS_REGION: "${{ secrets.AWS_REGION }}"
       TF_WORKING_DIR: ./terraform
 
     steps:
@@ -34,4 +34,4 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ vars.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
