--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,9 @@ name: Terraform CI/CD
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   terraform:
@@ -14,19 +12,19 @@ jobs:
     runs-on: ubuntu-latest 
 
     permissions:
-      id-token: write   # Required for OIDC
-      contents: read    # Required for actions/checkout
+      id-token: write
+      contents: read
 
     env:
       AWS_REGION: "${{ secrets.AWS_REGION }}"
-      TF_WORKING_DIR: ./terraform
+      TF_WORKING_DIR: "./terraform"
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4  # ← Updated to v4
         
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2  # ← Consider upgrading to v3
+        uses: hashicorp/setup-terraform@v3  # ← Updated to v3
         with:
           terraform_version: 1.9.8
 
@@ -35,3 +33,17 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
+          role-session-name: GitHubActions-Terraform  # ← Optional but helpful
+
+      # Add your Terraform workflow steps here
+      - name: Terraform Init
+        working-directory: ${{ env.TF_WORKING_DIR }}
+        run: terraform init
+
+      - name: Terraform Validate
+        working-directory: ${{ env.TF_WORKING_DIR }}
+        run: terraform validate
+
+      - name: Terraform Plan
+        working-directory: ${{ env.TF_WORKING_DIR }}
+        run: terraform plan
