--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,25 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan -out=tfplan  # ← Add -out=tfplan here
+
+      - name: Terraform Apply
+        id: apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        continue-on-error: true  # ← Ensures destroy runs even if apply fails completely
+        run: terraform apply -auto-approve tfplan
+
+      - name: Wait for testing (if successful)
+        if: steps.apply.outcome == 'success'
+        run: sleep 15m
+
+      # ✅ CRITICAL: Always destroy if apply was attempted
+      - name: Terraform Destroy (Success Path)
+        if: always() && steps.apply.outcome == 'success'
+        run: terraform destroy -auto-approve
+
+      - name: Terraform Destroy (Failure Path)
+        if: always() && steps.apply.outcome == 'failure'
+        run: terraform destroy -auto-approve
 
     
