--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: TFSec Security Scan
-        uses: aquasecurity/tfsec@main
+        uses: aquasecurity/tfsec@v1.28.4  # ← Fixed: Use version tag
         with:
-          soft-fail: true  # Continue even if issues found
+          soft-fail: true
 
       - name: Checkov Security Scan
-        uses: bridgecrewio/checkov-action@master
+        uses: bridgecrewio/checkov-action@v1.0.0  # ← Fixed: Use version tag
         with:
           directory: .
           framework: terraform
@@ -38,7 +38,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
-      pull-requests: write  # Needed for PR comments
+      pull-requests: write
     
     steps:
       - name: Checkout repo
@@ -59,7 +59,7 @@ jobs:
         run: terraform init
 
       - name: Setup Infracost
-        uses: infracost/actions/setup@v2
+        uses: infracost/actions/setup@v2  # ← This one is fine
         with:
           api-key: ${{ secrets.INFRACOST_API_KEY }}
       
@@ -72,18 +72,18 @@ jobs:
 
       - name: Post Cost to PR
         if: github.event_name == 'pull_request'
-        uses: infracost/actions/comment@v2
+        uses: infracost/actions/comment@v2  # ← This one is fine
         with:
           path: infracost.json
           behavior: update
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-  # TERRAFORM DEPLOYMENT (Your existing workflow)
+  # TERRAFORM DEPLOYMENT
   terraform-deploy:
     name: 'Terraform Deploy'
     runs-on: ubuntu-latest
     needs: [terraform-security-scan, terraform-cost-estimation]
-    if: github.ref == 'refs/heads/main'  # Only deploy from main branch
+    if: github.ref == 'refs/heads/main'
     
     permissions:
       id-token: write
@@ -127,7 +127,7 @@ jobs:
 
       - name: Wait for testing (if successful)
         if: steps.apply.outcome == 'success'
-        run: sleep 5m
+        run: sleep 10m
 
       - name: Terraform Destroy (Success Path)
         if: always() && steps.apply.outcome == 'success'
