--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           soft-fail: true
 
       - name: Checkov Security Scan
-        uses: bridgecrewio/checkov-action@v30
+        uses: bridgecrewio/checkov-action@v1.0.0  # ← Use working version
         with:
           directory: .
           framework: terraform
@@ -59,20 +59,26 @@ jobs:
         run: terraform init
 
       - name: Setup Infracost
-        uses: infracost/actions/setup@v2  # ← This is correct
+        uses: infracost/actions/setup@v2
 
       - name: Generate Cost Report
         env:
           INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         run: |
-          # Generate JSON output for PR comments
+          # Generate JSON output
           infracost breakdown --path . --format json --out-file infracost.json
           
-          # Generate human-readable output for logs
+          # Show cost in logs
           infracost breakdown --path . --format table
           
-          # Post comment to PR
-          infracost comment github --path infracost.json --repo $GITHUB_REPOSITORY --github-token ${{ secrets.GITHUB_TOKEN }} --behavior update
+          # Post comment to PR (only if it's a PR)
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            infracost comment github --path infracost.json \
+              --repo ${{ github.repository }} \
+              --pull-request ${{ github.event.pull_request.number }} \
+              --github-token ${{ secrets.GITHUB_TOKEN }} \
+              --behavior update
+          fi
 
   # TERRAFORM DEPLOYMENT
   terraform-deploy:
