--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,10 @@ jobs:
           soft-fail: true
 
       - name: Checkov Security Scan
-        uses: bridgecrewio/checkov-action@v1.0.0  # ← Use working version
+        uses: bridgecrewio/checkov-action@v12  # ← Proven working version
         with:
           directory: .
-          framework: terraform
+          skip_check: "CKV_AWS_378,CKV2_AWS_12,CKV_AWS_260,CKV_AWS_135,CKV_AWS_91,CKV_AWS_2"
           soft_fail: true
 
   # COST ESTIMATION
