--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,25 +11,20 @@ jobs:
   terraform-security-scan:
     name: 'Terraform Security Scan'
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
     
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: TFSec Security Scan
-        uses: aquasecurity/tfsec@v1.28.4
-        with:
-          soft-fail: true
+      - name: Run TFSec with Docker
+        run: |
+          docker run --rm -v "$(pwd):/src" aquasec/tfsec:latest /src
 
-      - name: Checkov Security Scan
-        uses: bridgecrewio/checkov-action@v12  # ← Proven working version
-        with:
-          directory: .
-          skip_check: "CKV_AWS_378,CKV2_AWS_12,CKV_AWS_260,CKV_AWS_135,CKV_AWS_91,CKV_AWS_2"
-          soft_fail: true
+      - name: Run Checkov with Docker
+        run: |
+          docker run --rm -v "$(pwd):/iac" bridgecrew/checkov:latest -d /iac \
+            --skip-check "CKV_AWS_378,CKV2_AWS_12,CKV_AWS_260,CKV_AWS_135,CKV_AWS_91,CKV_AWS_2" \
+            --soft-fail
 
   # COST ESTIMATION
   terraform-cost-estimation:
